--- a/app/views/time_sheets/edit_timesheet.html.haml
+++ b/app/views/time_sheets/edit_timesheet.html.haml
@@ -9,4 +9,4 @@
     = time_sheet.input :description, as: :text
     %br
     %br
-  = f.submit :save, class: "btn"
+  = f.submit :Update, class: "btn display-center"
