--- a/app/assets/stylesheets/time_sheets.css.scss
+++ b/app/assets/stylesheets/time_sheets.css.scss
@@ -18,3 +18,19 @@
   margin-left: 228px;
 }
 
+.edit-timesheet{
+  background-color: #fff;
+  padding: 2.5em;
+  border-radius: 0.7em;
+}
+
+.edit-timesheet-input{
+  width: 9.5em;
+  height: 1.9em !important;
+}
+
+.edit-timesheet-update{
+  margin-left: auto;
+  display: block;
+  margin-right: 39em;
+}
