--- a/app/views/time_sheets/edit_timesheet.html.haml
+++ b/app/views/time_sheets/edit_timesheet.html.haml
@@ -1,12 +1,21 @@
 %h1 Edit Your TimeSheet
-= simple_nested_form_for(@user, :url => update_time_sheets_path(@user.id, time_sheet_date: @time_sheet_date), :html => { method: 'PUT', class: "form-horizontal", multipart: true}) do |f|
-  = f.fields_for :time_sheets, @time_sheets do |time_sheet|
-    = time_sheet.label :Project
-    = time_sheet.select :project_id, options_for_select(@user.projects.pluck(:name, :id), time_sheet.object.project_id), {}, {style: "margin-left: 21px; margin-bottom: 16px"}
-    = time_sheet.input :date, input_html: {class: 'datepicker', 'data-behaviour' => 'datepicker', value: time_sheet.object.date.try(:strftime, "%d-%m-%Y"), 'readonly' => true}
-    = time_sheet.input :from_time, input_html: {value: time_sheet.object.from_time.try(:strftime, "%H:%M")}
-    = time_sheet.input :to_time, input_html: {value: time_sheet.object.to_time.try(:strftime, "%H:%M")}
-    = time_sheet.input :description, as: :text
-    %br
-    %br
-  = f.submit :Update, class: "btn display-center"
+= simple_nested_form_for(@user, :url => update_time_sheets_path(@user.id, time_sheet_date: @time_sheet_date), :html => { method: 'PUT', multipart: true, class: 'edit-timesheet'}) do |f|
+  %table.table
+    %th Project
+    %th Date
+    %th From Time
+    %th To Time
+    %th Description
+    %tbody
+      = f.fields_for :time_sheets, @time_sheets do |time_sheet|
+        %tr
+          %td= time_sheet.select :project_id, options_for_select(@user.projects.pluck(:name, :id), time_sheet.object.project_id), {}, {style: "margin-bottom: 16px"}
+          %td= time_sheet.input :date, input_html: {class: 'edit-timesheet-input datepicker',
+            'data-behaviour' => 'datepicker', value: time_sheet.object.date.try(:strftime, "%d-%m-%Y"),
+            'readonly' => true}, label: false
+          %td= time_sheet.input :from_time,
+            input_html: {value: time_sheet.object.from_time.try(:strftime, "%H:%M"), class: 'edit-timesheet-input'}, label: false
+          %td= time_sheet.input :to_time,
+            input_html: {value: time_sheet.object.to_time.try(:strftime, "%H:%M"), class: 'edit-timesheet-input'}, label: false
+          %td= time_sheet.input :description, as: :text, label: false
+  = f.submit :Update, class: "btn edit-timesheet-update"
