--- a/app/assets/stylesheets/time_sheets.css.scss
+++ b/app/assets/stylesheets/time_sheets.css.scss
@@ -42,6 +42,8 @@
 
 .add-timesheet .fields{
   display: -webkit-inline-box !important;
+  border-bottom: solid 0.02px #EEEEEE;
+  margin: 10px
 }
 
 ul#menu li {
